# asonam_osint

./: .gitignore  notes.md  pyproject.toml
Scripts/: analysis.py  main.py  main_gpt.py  main_llamma.py  tests.py  tests_2.py
Scripts/Code/GeoData/: GeoGuesser.py  GeoLocation.py
Scripts/Code/LLM/: Chatgpt.py  LLAMA.py
Scripts/Code/LLama/: LLAMA.py
Scripts/Code/Misc/: Errors.py  Utils.py
Scripts/Code/Plots/: WorldMap.py
