[tool.poetry]
name = "asonam-osint"
version = "0.1.0"
description = ""
authors = ["barbamento <lorenzo.alvisi@studio.unibo.it>"]
readme = "README.md"
packages = [{include = "asonam_osint"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
geopy = "^2.4.1"
pandas = "^2.2.2"
basemap = "^1.4.1"
seaborn = "^0.13.2"
geopandas = "^0.14.4"
shapely = "^2.0.4"
requests = "^2.32.3"
openai = "^1.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
